# nextgen-dmac

./: .gitignore  LICENSE  README.md
aggregator/: operators.py
binder/: environmental.yml  readme.md  requirements.txt
cloud_aggregator/: NOTES.md  Pulumi.dev.yaml  Pulumi.jjtest.yaml  Pulumi.yaml  README.md  __main__.py  requirements.txt
dask/: config.yaml  connect.py  environment.yaml  update_dask.sh
docs/: _config.yml  conclusions.md  index.md  ingest.md  meetings.md  outcomes.md  protoplan.md  references.md  related_projects.md
grib_index_aggregation/: README.md  dynamic_zarr_store.py  requirements.txt  test_dynamic_zarr_store.py
hrrr_aggregator/: NODD_Grib_Examples.ipynb  data_extractor.py  readme.md  requirements.txt
ingest_tools/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
ingest_tools/ingest_tools/: aws.py  filemetadata.py  filters.py  fvcom.py  generic.py  nos_ofs.py  pipeline.py  pipelineconfig.py  rtofs.py
ingest_tools/tests/: test_aws.py  test_filters.py  test_nos_ofs.py  test_pipelines.py  test_rtofs.py
ingest_tools/tests/data/: s3_sqs_payload.json
jupyterhub/: config.yaml  helm-dask.sh  port-fwd.sh
k8s/: README.md  aws-load-balancer-controller-service-account.yaml  delete-failed-pods.sh  ingress.yaml  install-load-balancer.sh  nginx-deployment.yaml  nlb.yaml  redis.yaml  xreds.yaml
kerchunk/: Dockerfile  README.md  argo-events-ingress.yaml  aws-secret.yaml  aws-sns-sensor.yaml  aws-sns-source.yaml  example_nos_updated_zarr_payload.json  kerchunk_nos_roms.py  kerchunk_nos_roms_single.py  nos-sns-sensor.yaml  (+8 more)
(+100 files in other folders)
